syntax = "proto3";

option go_package = "./rpc/anonymous_user";

message UserReq {
  string userId = 1;
}

message UserResp {
  string userId = 1;
  string name = 2;
  int32 age = 3;
}

service UserService {
  rpc getUserByName(UserReq) returns (UserResp);
}


// goctl rpc protoc user.proto --go_out=. --go-grpc_out=. --zrpc_out=../
