syntax = "proto3";

option go_package = "./grpc/order";

message GrpcGetOrderReq {
  string orderId = 1;
}

message GrpcGetOrderResp {
  string orderId = 1;
  string orderName = 2;
  int32 price = 3;
}

service GrpcOrderService {
  rpc GrpcGetOrder(GrpcGetOrderReq) returns (GrpcGetOrderResp);
}


// goctl rpc protoc order.proto --go_out=../ --go-grpc_out=../ --zrpc_out=../